--- a/src/components/__barChart.scss
+++ b/src/components/__barChart.scss
@@ -1,5 +1,8 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  border-bottom: 1px dotted black;
+  background-color: black;
+
+  color: #fff;
 }
