--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+.box {
+  margin: 10px;
+  padding: 20px;
+  border: 2px solid salmon;
   text-align: center;
+  color: salmon;
 }
 
 .App-logo {
