added a style for tooltip's p tag and converted large numbers to numbers with commas

--- a/src/components/__barChart.scss
+++ b/src/components/__barChart.scss
@@ -22,9 +22,14 @@
 
 .title {
   font-size: 2rem;
+  color: #333;
 }
 
 svg {
   max-width: 960;
   max-height: 500;
+}
+
+foreignObject div p {
+  font-size: 0.7rem;
 }
