--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #f5f5f5;
 }
+
 .box {
   margin: 10px;
   padding: 20px;
@@ -49,8 +51,8 @@ text.tooltip {
   background-color: blue;
 }
 
-svg {
+/* svg {
   max-width: 960;
   width: 100%;
   max-height: 500;
-}
+} */
