--- a/src/components/__barChart.scss
+++ b/src/components/__barChart.scss
@@ -25,9 +25,9 @@
   color: #333;
 }
 
-svg {
-  max-width: 960;
-  max-height: 500;
+.d-flex #svg-id {
+  background-color: white;
+  border-radius: 0 0 15px 15px;
 }
 
 foreignObject div p {
