--- a/src/components/__barChart.scss
+++ b/src/components/__barChart.scss
@@ -20,8 +20,8 @@
   opacity: 0.5;
 }
 
-.title {
-  font-size: 2rem;
+.chart-title {
+  font-size: 1.5rem;
   color: #333;
 }
 
@@ -31,5 +31,5 @@
 }
 
 foreignObject div p {
-  font-size: 0.7rem;
+  font-size: 0.5rem;
 }
