--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #f5f5f5;
+  background-color: #ebebeb;
+  /* background-color: #f5f5f5; */
 }
 
 .box {
