--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   color: salmon;
 }
 
+/* targets the svg's parent container  */
+.col-md-8.col-12 .row .d-flex.col {
+  background-color: #ffffff;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
