--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,27 @@
   background-color: #ffffff;
 }
 
-.App-logo {
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -55,10 +75,4 @@
 
 text.tooltip {
   background-color: blue;
-}
-
-/* svg {
-  max-width: 960;
-  width: 100%;
-  max-height: 500;
 } */
