--- a/src/components/__casesStyles.scss
+++ b/src/components/__casesStyles.scss
@@ -1,4 +1,13 @@
 .c-footnote {
-  font-size: 9px;
+  font-size: 10px;
   font-weight: bold;
+}
+
+.cases-info-row:nth-child(1) {
+  padding-right: 0;
+}
+
+.cases-info-row:nth-child(2) {
+  padding-left: 0;
+  border-left: 1px solid #ccc;
 }
