--- a/src/components/__casesStyles.scss
+++ b/src/components/__casesStyles.scss
@@ -8,6 +8,8 @@
 }
 
 .cases-info-row:nth-child(2) {
-  padding-left: 0;
+  border-left: 1px solid #ccc;
+}
+.cases-info-row:nth-child(3) {
   border-left: 1px solid #ccc;
 }
