added the class c-date for casesModule

--- a/src/components/__casesStyles.scss
+++ b/src/components/__casesStyles.scss
@@ -3,6 +3,12 @@
   font-weight: bold;
 }
 
+.c-date {
+  font-size: 10px;
+  font-weight: bold;
+  color: rgb(72, 72, 72);
+}
+
 .cases-info-row:nth-child(4) {
   border-left: 1px solid #ccc;
 }
